--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.49 2009/10/10 11:07:57 ith Exp $
+% $Id: multibrane.tex,v 1.50 2009/10/13 21:13:16 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.49 2009/10/10 11:07:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.50 2009/10/13 21:13:16 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -748,7 +748,7 @@ incompatible with the generalized BM bound.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{The finite $n$ model}
+\subsection{\texorpdfstring{The finite $n$ model}{The finite n model}}
 \label{sec:finitensub-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -766,7 +766,7 @@ the finite $n$ limit is therefore given by
 \begin{equation}
 \label{eq:genP-multi}
 P = -T_3 STr \left(h^4(\rho) \sum_{k,p=0}^{\infty}(-\XR)^k Y^p (\alpha^i
-\alpha^i)^{k+p}{1/2 \choose k} {1/2 \choose p} + V(\rho)-h^4(\rho) \right) \,,
+\alpha^i)^{k+p}\binom{1/2}{k} \binom{1/2}{p} + V(\rho)-h^4(\rho) \right) \,,
 \end{equation}
 % 
 where 
@@ -774,7 +774,7 @@ where
 \begin{equation}
 Z \equiv \lambda^2 h^{-4}(\rho), \hspace{0.5cm} Y \equiv 4\lambda^2 R_m^4
 h^{-4}(\rho),
-\hspace{0.5cm} {1/2 \choose q}
+\hspace{0.5cm} \binom{1/2}{q}
 \equiv \frac{\Gamma(3/2)}{\Gamma(3/2-q)\Gamma(1+q)} \,.
 \end{equation}
 % 
@@ -900,7 +900,7 @@ difficult to let $N\gg n$ and still constrain this model.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{Bounds on the Tensor-Scalar Ratio for finite $n$} 
+\subsection{Bounds on the Tensor-Scalar Ratio for finite \texorpdfstring{$n$}{n}} 
 \label{sec:multibounds-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
