--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.15 2009/10/13 19:31:50 ith Exp $
+% $Id: results.tex,v 1.16 2009/10/13 21:13:38 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.15 2009/10/13 19:31:50 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.16 2009/10/13 21:13:38 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -30,9 +30,13 @@ the closed Klein-Gordon equation of motion for second order scalar field
 perturbations in \eq{eq:KG2-fourier-sr-num}. This includes the slow
 roll approximation of the source term for second order perturbations, but the slow
 roll version of the evolution equations has not been used for the background or first
-order perturbations. 
+order perturbations. In this chapter the results of the numerical calculation
+defined in Chapter~\ref{ch:numericalsystem} will be presented. This represents the
+first step towards a full calculation of the Klein-Gordon equation at second order.
+In addition to the results provided below, plans will be described for future work to
+improve the numerical system and increase its applicability. 
 
-As a proof of concept the system was tested with four different
+As a proof of concept the numerical system was tested with four different
 potentials, $V(\vp)=\msqphisq$, $\lambdaphifour$, $\phitwooverthree$ and
 $\msqphisqwithV$, and results computed across three
 different $k$ ranges. As expected, considering the use of a single slowly
@@ -85,21 +89,34 @@ Section~\ref{sec:disc-num} there will be a discussion of outcomes of the chapter
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+In Section~\ref{sec:msqphisq-res} general results will be given demonstrating the
+effective operation of the numerical system. These results all use the
+$V(\vp)=\msqphisq$ for the purposes of comparison. The results for the four
+different potentials will be compared in Section~\ref{sec:compare-res}.
 
-At first order our solutions agree with previous work
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\subsection{Results for \texorpdfstring{$V(\vp)=\msqphisq$}{m-squared model}}
+\label{sec:msqphisq-res}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+
+At first order the solutions obtained agree with previous work
 \cite{Salopek:1988qh,Martin:2006rs,Ringeval:2007am}, with oscillations
 being damped until horizon crossing (when $k=aH$) after which the
 curvature perturbation becomes conserved. Figure~\ref{fig:dp1} shows
 the real and imaginary parts of the first order perturbations from
 when the initial conditions are set at $k/aH=50$ to just after horizon
 crossing. The x-axis for most of the following figures shows the
-number of e-foldings left until the end of inflation instead of the
-internally used time variable $\N$.
+number of e-foldings left until the end of inflation ($\N_\mathrm{end}-\N$) instead
+of the internally used time variable $\N$.
 %
 % 
 \begin{figure}
  \centering
- \includegraphics[width=\textwidth]{numerical/graphs/dp1_kwmap}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/dp1_kwmap}
  \caption[First Order Perturbation]{The first order perturbation $\dvp1$ rescaled by
 $k^{3/2}/(\sqrt{2}\pi)$ from the beginning of the simulation until around
 horizon crossing (red dot-dashed line). The real (blue) and imaginary (green
@@ -111,7 +128,7 @@ dashed) perturbations are shown for $\kwmap$.}
 
 
 
-In Figure~\ref{fig:dp2realimag} we show the evolution of the second
+Figure~\ref{fig:dp2realimag} shows the evolution of the second
 order perturbations for wavenumber $\kwmap$. As mentioned above the
 overall amplitude of the second order perturbations is many orders of
 magnitude smaller than the first order ones. In Figures~\ref{fig:dp1}
@@ -121,7 +138,7 @@ magnitude of the resulting power spectra.
 % 
 \begin{figure}
  \centering
- \includegraphics[width=\textwidth]{numerical/graphs/dp2_kwmap}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/dp2_kwmap}
  \caption[Second Order Perturbation]{The real (blue line) and imaginary (green
 dashed) components of the
 second order
@@ -135,11 +152,11 @@ of horizon exit (red dot-dashed line).}
 
 
 
-The source term $S(\kvi)$ is calculated at each time step using the
-results of the first order and background runs. This term drives the
-production of second order perturbations as shown in
+The source term $S(\kvi)$ is calculated using \eq{eq:KG2-src-sr-aterms} at each time
+step using the results of the first order and background runs. This term
+drives the production of second order perturbations as shown in
 \eqs{eq:KG2-fourier-sr-num} and
-(\ref{eq:KG2-fourier-sr-ntime}). Figure~\ref{fig:src-full} shows the
+\eqref{eq:KG2-fourier-sr-ntime}. Figure~\ref{fig:src-full} shows the
 absolute magnitude of the source term for a single $k$ mode, $\kwmap$,
 for all time steps calculated.
 % 
@@ -210,15 +227,13 @@ other terms in the second order evolution equation
 \end{equation}
 %
 then Figure~\ref{fig:src-vs-others} shows the absolute magnitude of
-both $S$ and $T$.  It is clear that the source term is of comparable
+both $S$ and $T$.  It is clear that for this $k$ the source term is of comparable
 magnitude only early in the simulation.  Figure~\ref{fig:s-over-t-3ks}
 shows a comparison of $|S|/|T|$ for three different $k$ values. The larger the
-$k$ mode the closer
-in amplitude $S$ is to the rest of the terms in the ODE.
-A priori it is not known
-where $S$ will be large for a particular chosen potential and mode but
-once determined it could be possible to significantly reduce the time required
-for the simulation by only calculating $S$ in the regions where it is
+$k$ mode, the closer in amplitude $S$ is to the rest of the terms in the ODE.
+A priori it is not known where $S$ will be large for a particular chosen potential
+and mode but once determined it could be possible to significantly reduce the time
+required for the simulation by only calculating $S$ in the regions where it is
 important.
 %
 \begin{figure}
@@ -231,6 +246,7 @@ comparable magnitude at the beginning of the simulation.}
  \label{fig:src-vs-others}
 \end{figure}
 % 
+
 \begin{figure}
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/s-over-t-3ks-large}
@@ -246,22 +262,18 @@ at early stages or is important throughout the evolution.}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 In Figure~\ref{fig:src-kinit} the value of $|S|$ at the start of the evolution
-of $\dvp2$ for
-each $k$ mode is shown. The magnitude of the source term is much smaller for
-larger $k$s (smaller
-scales). 
+of $\dvp2$ for each $k$ mode is shown. The magnitude of the source term is much
+smaller for larger $k$s (smaller scales). 
 Because the smaller $k$s begin their evolution earlier the relative difference
-in $|S|$ is not as
-pronounced when measured at a single timestep (see for example
+in $|S|$ is not as pronounced when measured at a single timestep (see for example
 Figure~\ref{fig:src-3ks}).
 It should also be remembered that the magnitude of other terms in the second
-order ODE is
-small for larger $k$s as shown by the ratio $|S|/|T|$ in
-Figure~\ref{fig:s-over-t-3ks}
-where $T$ is defined above in \eq{eq:Tdefn}.
+order ODE is small for larger $k$s as shown by the ratio $|S|/|T|$ in
+Figure~\ref{fig:s-over-t-3ks} where $T$ is defined above in \eq{eq:Tdefn}.
+% 
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{numerical/graphs/src_kinit_log}
+\includegraphics[width=0.8\textwidth]{numerical/graphs/src_kinit_log}
  \caption[Source term at initial start times]{The absolute magnitude of the source 
 term at the initial start time for each $k$ when $k = aH \times 50$ deep inside the
 horizon. The results are for the range $K_1=\left[ 1.9\e{-5},
@@ -279,9 +291,10 @@ line shows $|S|$ when all $\dvp2$ modes have been started. Finally the lower red
 line plots $|S|$
 after all modes have exited the horizon, around 52 e-foldings before the end of
 inflation.
+% 
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{numerical/graphs/src_3ns-large}
+\includegraphics[width=0.8\textwidth]{numerical/graphs/src_3ns-large}
 \caption[Source term at three different times]{The absolute magnitude of the source 
 term for all $ks$ in the range at three different timesteps: the upper blue line when
 only the largest modes have been initialised; the middle green line when all modes
@@ -293,6 +306,9 @@ exited the horizon. The $k$ range shown here is $K_1=\left[ 1.9\e{-5}, 0.039
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
+
+
+
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -301,10 +317,8 @@ exited the horizon. The $k$ range shown here is $K_1=\left[ 1.9\e{-5}, 0.039
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
-
-All the results quoted so far are for
-the $\msqphisq$ model. 
+All the results quoted so far are for the $V(\vp)=\msqphisq$ model. In this section
+the results for all four models will be compared.
 % 
 \begin{figure}[h]
 \centering%
@@ -323,7 +337,7 @@ the $\msqphisq$ model.
 }
 \caption[The source term for different potentials]{Plots of the source term for the
 four different potentials used.}
-\label{fig:potentials-num}
+\label{fig:sourcecomparison-res}
 \end{figure}
 % 
 \begin{figure}
@@ -339,7 +353,17 @@ evolution for the four different models.}
  \includegraphics[width=0.8\textwidth]{numerical/graphs/cmp_src_kwmap_zoom-large}
  \caption[Comparison of source term for models at early stage]{Comparison of the
 source term evolution for the four different models at early times.}
-\label{fig:cmp-src-kwmap}
+\label{fig:cmp-src-zoom-kwmap}
+\end{figure}
+% 
+\begin{figure}
+ \centering
+\includegraphics[width=0.8\textwidth]{numerical/graphs/cmp_Pr_allks-large}
+\caption[Comparison of $\Pr$ for models]{Comparison of the power spectrum $\Pr$ for
+the four different models. The three models $V(\vp)=\msqphisq$, $\lambdaphifour$ and
+$phitwooverthree$ have red spectra ($n_s <1$) while the $V(\vp) = \msqphisqwithV$
+model has a blue spectrum ($n_s>1$).}
+\label{fig:cmp-Pr}
 \end{figure}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -353,18 +377,22 @@ source term evolution for the four different models at early times.}
 
 There are many possible next steps to improve the program outlined in
 Chapter \ref{ch:numericalsystem}. Chief amongst these is to implement the
-full source term equation (\ref{eq:KG2-source-ntime}). Although clearly
-more complicated than the slow roll case in \eq{eq:KG2-fourier-sr-ntime}
-only two more $\theta$ dependent terms need to be added to $\A$--$\D$ in
-\eq{eq:AtoD-num}.  For the two test models we have used in this paper, which
-are both slowly rolling during inflation, it is not expected that
+full second order source term given in \eqs{eq:SOKG-real-num} and
+\eqref{eq:Fdvk1-fourier-num}. Although clearly
+more complicated than the slow roll case in \eq{eq:KG2-fourier-sr-ntime},
+only three more $\theta$ dependent terms need to be added to the $\A$--$\D$ terms
+listed in \eq{eq:AtoD-num}.  The four potentials used above are all slowly rolling
+during inflation. Therefore it is not expected that
 using the full source equation would result in an appreciably
-different outcome until the end of the inflationary phase. Though once
+different outcome in the models until the end of the inflationary phase. Once
 the field has stopped to roll slowly, new observable features might
 arise as is indeed the case at first order. 
 
 
-Full second order equation in terms of $\N$:
+To set up the numerical system to use the full second order equation
+\eqs{eq:SOKG-real-num} and \eqref{eq:Fdvk1-fourier-num}, they must be written in
+terms of $\N$ with the $\theta$ dependent terms grouped together. The main equation
+becomes
 \begin{multline}
  \label{eq:fullso-res}
 \ddN{\dvp2} + \left(3 + \frac{\dN{H}}{H}\right) \dN{\dvp2} +
@@ -376,7 +404,7 @@ Full second order equation in terms of $\N$:
 + S_\mathrm{full}(\kvi) = 0\,,
 \end{multline}
 % 
-where the full source equation is given by
+and the full source equation is given by
 % 
 \begin{align}
 \label{eq:fullsrc-res}
@@ -398,8 +426,10 @@ S_\mathrm{full}(\kvi) = \frac{1}{(2\pi)^2}\int \d q q^2 &\Bigg\{
 % 
 &+ F_\mathrm{full}(\dvp1(\kvi), \dN{\dvp1}(\kvi))\,.
 \end{align}
+% 
 The $F$ term for the full equation requires the use of three further $\theta$
 integrals in addition to those in \eq{eq:AtoD-num}:
+% 
 \begin{align}
 \label{eq:efg-terms-res}
  \E(\kvi, \qvi) &= \int_0^\pi \cos^3(\theta) \sin(\theta) \dvp1(\kvi-\qvi)\d \theta
@@ -416,7 +446,7 @@ integrals in addition to those in \eq{eq:AtoD-num}:
 The term $\sin^3(\theta)/|\kvi-\qvi|^2 \rightarrow 0$ in the limit when $k=q$ and
 $\theta\rightarrow 0$.
 % 
-The full $F$ term can now be written:
+Using the terms $\E$, $\F$ and $\wt{\G}$ the full $F$ term can now be written:
 \begin{align}
  \label{eq:fullfterm-res}
 F_\mathrm{full} &= \frac{8\pi G}{(2\pi)^2}\frac{1}{(aH)^2} \int \d q\, q^2 \Bigg\{
@@ -434,7 +464,7 @@ G}{4}(\dN{\vp_0})^2 \right)q^2 + \frac{3}{4}\frac{8\pi G}{(aH)^2} X^2 \right)
 \\
 % 
 &\qquad - 2Q (8\pi G) (\dN{\vp_0})^2\frac{q}{k} \dN{\dvp1}(\qvi)\Bigg] \B(\kvi, \qvi)
-\nonumber \\
+\nonumber \displaybreak[0]\\
 % 
 &+ \Bigg[ \left(-2 + (8\pi G)(\dN{\vp_0})^2 \left(\frac{1}{4} + \frac{1}{2aH}\right)
 \right) Q \dvp1(\qvi) \nonumber \\
@@ -447,7 +477,7 @@ G}{4}(\dN{\vp_0})^2 \right)q^2 + \frac{3}{4}\frac{8\pi G}{(aH)^2} X^2 \right)
 % 
 &+ (8\pi G) \dN{\vp_0} \Bigg[ \left(\frac{1}{4}(\dN{\vp_0})^2q^2 +
 \frac{Q^2}{2(aH)^2}\right) \dvp1(\qvi) + \frac{Q}{2}\dN{\vp_0} \dN{\dvp1}(\qvi)
-\Bigg] \E(\kvi, \qvi) \nonumber\\
+\Bigg] \E(\kvi, \qvi) \nonumber \displaybreak[0]\\
 % 
 &+ (8\pi G)^2 \dN{\vp_0} Q \Bigg[ -\frac{Q}{2(aH)^2}\left(\frac{k^2}{2}+q^2\right)
 \dvp1(\qvi) - \frac{1}{4} \dN{\vp_0} k^2 \dN{\dvp1}(\qvi) \Bigg] \F(\kvi, \qvi)
@@ -455,28 +485,37 @@ G}{4}(\dN{\vp_0})^2 \right)q^2 + \frac{3}{4}\frac{8\pi G}{(aH)^2} X^2 \right)
 % 
 &+ (8\pi G)^2 (\dN{\vp_0})^2 \Bigg[ -\frac{Q}{2}\left(\frac{k^2}{2} +
 \frac{q^2}{aH}\right)\dvp1(\qvi) -\frac{(aH)^2}{4}\dN{\vp_0}k^2 \dN{\dvp1}(\qvi)
-\Bigg] \wt{\G}(\kvi, \qvi) \,.
+\Bigg] \wt{\G}(\kvi, \qvi) \Bigg\} \,.
 \end{align}
+% 
+This set of equations is clearly much longer than the slow roll ones used in
+Chapter~\ref{ch:numericalsystem}. The numerical complexity is not however much
+greater, once the three terms in \eq{eq:efg-terms-res} are calculated. The running
+time of the full calculation will clearly be a significant logistical consideration.
 
-
-Beyond this the next likely step is to implement a multi-field version of the
-system. This would allow the investigation of models that inherently
-produce large second order perturbations. In Ref.~\cite{Malik:2006ir} the
-Klein-Gordon equation is given for multiple fields and upgrading the
-simulation to use these equations is a
-straight-forward if lengthy process.  
-
-
-The performance of the numerical simulation could also be improved by
+With this in mind, the performance of the numerical simulation could be improved by
 analysing the most time consuming processes and investigating what
-optimisations could be implemented. As we have discussed above we have
-set $N_k=1025$ for our test runs. This provides good coverage of the
+optimisations could be implemented. The realisation of the current perhaps inelegant
+procedure will allow any performance improvements to be benchmarked for accuracy as
+well as speed.
+% 
+As discussed above $N_k$ was set as $1025$ for the test runs. This provides good
+coverage of the
 WMAP $k$ range but it is not clear whether it sufficiently
 approximates the integral to infinity for the source term.  Currently
-we are restricted in our choice of $N_k$ by logistical factors \ie the
-running time and memory usage of the code. By optimising the routines
-for both memory and speed it is hoped we can extend the maximum value
-of $k$ to larger values.
+logistical factors, including the running time and memory usage of the code,
+restrict the choice of $N_k$. By optimising the routines
+for reduced memory and increased speed it is hoped to extend the $k$ ranges and
+increase the resolution. 
+
+
+Beyond these considerations the next clear step is to implement a multi-field
+version of the system. This would allow the investigation of models that inherently
+produce large second order perturbations. In \Rref{Malik:2006ir} the
+second order Klein-Gordon equation is given for multiple fields and upgrading the
+simulation to use these equations should be a straight-forward if lengthy process.
+Extending the current data-structures and routines to a fixed number of extra fields
+will increase the numerical complexity and the run-time of the code. 
 
 
 
@@ -492,43 +531,41 @@ of $k$ to larger values.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-In this paper we have described the numerical solution of the
-evolution equations for second order scalar perturbations, using the
-closed form of the Klein-Gordon equation, \eq{eq:KG2-fourier-sr-num}. We
-demonstrate that direct calculation of field perturbations beyond
-first order using perturbation theory is readily achievable, though
+Part~\ref{part:numerical} of this work described the numerical
+solution of the evolution equations for second order scalar perturbations, using the
+closed form of the Klein-Gordon equation in \eq{eq:KG2-fourier-sr-num}. Direct
+calculation of field perturbations beyond
+first order using perturbation theory has been shown to be readily achievable, though
 not trivial.
 
-For this first demonstration we have limited ourselves to considering
+This first demonstration has been limited ourselves to considering
 the slow roll source term in \eq{eq:KG2-fourier-sr-num} but without imposing
-slow roll on the evolution terms of the ODEs. We have investigated two
-standard potentials, $\frac{1}{2}m^2\phi^2$ and
-$\frac{1}{4}\lambda\phi^4$, to demonstrate the capabilities of the
+slow roll on the evolution terms of the ODEs. Four different potentials
+$V(\vp)=\msqphisq$, $\lambdaphifour$, $\phitwooverthree$ and $\msqphisqwithV$ were
+used to demonstrate the capabilities of the
 system. The singularity at $k=0$ which arises as larger and larger
 scales are considered is avoided by implementing a cutoff at small
 wavenumbers below $\kmin$. This is a pragmatic choice necessary for
-the calculation, but as mentioned above there is some evidence that
+the calculation, but as mentioned before there is some evidence that
 such a cutoff might also explain lack of power at large scales in the
 WMAP data \cite{spergel, Sinha:2005mn, Kim:2009pf}. It is also necessary to
 pick a maximum $k$ value, and this choice is dictated by computational
 resources and with reference to observationally relevant scales. In
-this paper we have used $k$ ranges which are comparable with the
-scales observed by WMAP. By comparing the analytical results of the
-convolution integral with the numerical calculation, we have chosen
-values of the parameters $N_\theta, N_k$ and $\Delta k$ which minimise
-the numerical error. The convolution scheme that we have implemented
+this demonstration $k$ ranges have been used which are comparable with the
+scales observed by the WMAP satellite. By comparing the analytical results of the
+convolution integral with the numerical calculation, values of the parameters
+$N_\theta, N_k$ and $\Delta k$ were chosen which minimise
+the numerical error. The convolution scheme that has been implemented
 works best when $\Delta k>\kmin$.
 
 
-We have shown explicitly that the second order calculations for our chosen
+We have seen explicitly that the second order calculations for our chosen
 potentials are obtainable once the cut-off for $\kmin$ is
 implemented. As expected for these unexceptional potentials in the slowly
 rolling regime the magnitude of second order perturbations is extremely
 suppressed in comparison with the first order amplitude. We have shown the
 evolution of the source term equation during the inflationary regime can be
 readily calculated.
-
-
 
 
 By computing the perturbations to second order we have direct access
@@ -547,10 +584,11 @@ therefore eventually allow a full numerical calculation of $\fnl$.
 
 
 In summary, we have demonstrated that numerically solving the closed
-Klein-Gordon equation for second order perturbations is possible. We
-have used the slow roll version of the source term in this paper, but
-hope to extend our work to use the full source soon. The two test
-models we have used have been shown to have negligible second order
-perturbations in line with analytic results. We have compared the
-analytic and numerical solutions for the convolution term and found
-them to be in good agreement.
+Klein-Gordon equation for second order perturbations is possible. The slow roll
+version of the source term was used in the calculation, but
+as described in Section~\ref{sec:next-res}, the extention of the system to use
+the full source term is achievable. The models we have used have been shown to have
+negligible second order
+perturbations in line with analytic results. The
+analytic and numerical solutions for the convolution term have been compared and
+found to be in good agreement.
