Change titles to discussion.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.50 2009/10/10 11:07:57 ith Exp $
+% $Id: dbi.tex,v 1.51 2009/10/13 21:15:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.50 2009/10/10 11:07:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.51 2009/10/13 21:15:08 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1040,7 +1040,7 @@ chapter can be applied.
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
-\section{Conclusion}
+\section{Discussion}
 \label{sec:conclusion-dbi}
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
