--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.16 2009/10/13 21:13:38 ith Exp $
+% $Id: results.tex,v 1.17 2009/10/13 21:15:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.16 2009/10/13 21:13:38 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.17 2009/10/13 21:15:08 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -525,7 +525,7 @@ will increase the numerical complexity and the run-time of the code.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\section{Discussion and conclusion}
+\section{Discussion}
 \label{sec:disc-num}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
