Fixed figure caption.

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.17 2009/10/13 21:15:08 ith Exp $
+% $Id: results.tex,v 1.18 2009/10/14 09:32:00 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.17 2009/10/13 21:15:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.18 2009/10/14 09:32:00 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -361,7 +361,7 @@ source term evolution for the four different models at early times.}
 \includegraphics[width=0.8\textwidth]{numerical/graphs/cmp_Pr_allks-large}
 \caption[Comparison of $\Pr$ for models]{Comparison of the power spectrum $\Pr$ for
 the four different models. The three models $V(\vp)=\msqphisq$, $\lambdaphifour$ and
-$phitwooverthree$ have red spectra ($n_s <1$) while the $V(\vp) = \msqphisqwithV$
+$\phitwooverthree$ have red spectra ($n_s <1$) while the $V(\vp) = \msqphisqwithV$
 model has a blue spectrum ($n_s>1$).}
 \label{fig:cmp-Pr}
 \end{figure}
