--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.21 2009/10/05 15:52:09 ith Exp $
+%  $Id: ihformat.sty,v 1.22 2009/10/14 11:31:41 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,7 +19,7 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.21 2009/10/05 15:52:09 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.22 2009/10/14 11:31:41 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
@@ -91,7 +91,7 @@
 
 %subfig package
 \RequirePackage{subfig}
-\captionsetup{lofdepth=2}
+% \captionsetup{lofdepth=2}
 % % % % % % % % % % 
 % fancyhdr settings
 % % % % % % % % % % 
