--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.50 2009/10/13 21:13:16 ith Exp $
+% $Id: multibrane.tex,v 1.51 2009/10/14 11:31:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.50 2009/10/13 21:13:16 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.51 2009/10/14 11:31:54 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -793,8 +793,8 @@ given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$. Using
 \eq{eq:str-even-multi} and the expressions
 % 
 \begin{eqnarray}
- \sum_{k=0}^\infty A^k {1/2 \choose k} &=& \sqrt{1+A}\,,\\
- \sum_{k=0}^\infty A^k {1/2 \choose k} 4k &=& \frac{2A}{\sqrt{1+A}}\,,
+ \sum_{k=0}^\infty A^k \binom{1/2}{k} &=& \sqrt{1+A}\,,\\
+ \sum_{k=0}^\infty A^k \binom{1/2}{k} 4k &=& \frac{2A}{\sqrt{1+A}}\,,
 \end{eqnarray}
 % 
 the terms $P_2$ and $E_2$ can be derived:
