Changed to using Mpc.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.20 2009/10/11 19:46:42 ith Exp $
+% $Id: ihmacros.sty,v 1.21 2009/10/14 13:29:46 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -48,7 +48,7 @@
 % 
 % 
 \newcommand{\Mpl}{\ensuremath{M_{\mathrm{PL}}}}
-\newcommand{\Mpc}{\ensuremath{M \mathrm{pc}}}
+\newcommand{\Mpc}{\ensuremath{\mathrm{Mpc}}}
 % 
 \newcommand{\nend}{\ensuremath{n_{\mathrm{end}}}}
 % 
